[package]
name = "meal-planner"
version = "0.1.0"
edition = "2021"

[lib]
name = "meal_planner"
path = "lambda/src/lib/lib.rs"

[[bin]]
name = "recipes"
path = "lambda/src/bin/recipes/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.6"
aws-sdk-dynamodb = "1.18.0"
axum = "0.7.3"
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
mockall = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
